# RIME

./: CMakeLists.txt  Dockerfile  README.md  RIME.pro  catalogue.txt  dialog_ui_copy.py  docker-build-dev.sh  docker-build.sh  docker-compose.yaml  helpers.py  main.py  mainwindow.ui  mainwindow_ui.py  metadata_attrbiutes.txt  rime-cli.sh  rime.sh  rime_editmeta.py  rime_main.py  rime_manager.py  test_rime.py  valid_metadata.txt  valid_rip.txt  validate.py
back_end/: parser_test.c  status_updater.c  status_updater.h
back_end/c/: dum_cdf.c  hash_table.c  hash_table.h  netCDF.c  parser.c  parser.h  parser.h.gch  parser_test.c  status_updater.c  status_updater.h  status_updater.h.gch  test.out
back_end/python/: checkSum.py  convert.py  fWatch.py  metaDataFormater.py  path  path.gtif  path.h5  rime.py  statusUpdate.py  updateMetaData.py  validate.py
back_end/python/test/: test_catalog.txt  test_metadata.txt  test_rip.txt  utest_meta  utest_rip
back_end/python/test/test_bins_utest/NETCDF4/: AMSRE_36V_AM_FT_2002_day170.nc  AMSRE_36V_AM_FT_2002_day171.nc  AMSRE_36V_AM_FT_2002_day172.nc  AMSRE_36V_AM_FT_2002_day173.nc  AMSRE_36V_AM_FT_2002_day174.nc  AMSRE_36V_AM_FT_2002_day175.nc  AMSRE_36V_AM_FT_2002_day176.nc  AMSRE_36V_AM_FT_2002_day177.nc  AMSRE_36V_AM_FT_2002_day178.nc  AMSRE_36V_AM_FT_2002_day179.nc  AMSRE_36V_AM_FT_2002_day180.nc  AMSRE_36V_AM_FT_2002_day181.nc  (+105 more)
gui/: rime_editmeta.py  rime_mainpanel.py  rime_variables.py
gui/panels/: rime_editmeta.py  rime_inputpanel.py  rime_outputpanel.py  rime_runpanel.py  rime_runprogress.py
gui/styles/: rime_styles.qss
